--- a/arch/arm64/boot/dts/amlogic/mesongxl.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesongxl.dtsi
@@ -191,7 +191,7 @@
 	};
 	amlogic-jtag {
 		compatible = "amlogic, jtag";
-		status = "okay";
+		status = "disabled";
 		pinctrl-names = "jtag_apao_pins", "jtag_apee_pins";
 		pinctrl-0 = <&jtag_apao_pins>;
 		pinctrl-1 = <&jtag_apee_pins>;
