--- a/arch/arm64/boot/dts/kvim.dts
+++ b/arch/arm64/boot/dts/kvim.dts
@@ -728,7 +728,7 @@
 		compatible = "amlogic, meson-uart";
 		reg = <0x0 0xc81004e0 0x0 0x18>;
 		interrupts = <0 197 1>;
-		status = "disable";
+		status = "okay";
 		clocks = <&clock CLK_XTAL>;
 		clock-names = "clk_uart";
 		fifosize = < 64 >;
