--- a/arch/arm64/configs/meson64_defconfig
+++ b/arch/arm64/configs/meson64_defconfig
@@ -339,6 +339,7 @@ CONFIG_AMLOGIC_CPU_INFO=y
 CONFIG_DEFEND_IMG=y
 CONFIG_AML_AO_CEC=y
 CONFIG_CRYPTO_AML=y
+CONFIG_AMLOGIC_TEE=y
 CONFIG_UEVENT_HELPER_PATH="/sbin/hotplug"
 CONFIG_DMA_CMA=y
 CONFIG_CONNECTOR=y
