--- a/arch/arm64/boot/dts/amlogic/gxl_p212_1g.dts
+++ b/arch/arm64/boot/dts/amlogic/gxl_p212_1g.dts
@@ -78,9 +78,15 @@
 			//no-map;
 		};
 
-		ion_reserved:linux,ion-dev {
+		carveout_reserved:linux,carveout-reserve {
 			compatible = "amlogic, idev-mem";
 			size = <0x0 0x2000000>;
+		};
+		cma_reserved:linux,cma-reserve {
+			compatible = "shared-dma-pool";
+			reusable;
+			alignment = <0x0 0x400000>;
+			size = <0x0 0x4000000>;
 		};
 
 		/*  vdin0 CMA pool */
@@ -247,7 +253,7 @@
 
 	ion_dev {
 		compatible = "amlogic, ion_dev";
-		memory-region = <&ion_reserved>;
+		memory-region = <&cma_reserved>;
 	};
 
 	vdec {
