--- a/arch/arm64/boot/dts/amlogic/gxl_p241_1g.dts
+++ b/arch/arm64/boot/dts/amlogic/gxl_p241_1g.dts
@@ -85,10 +85,16 @@
 			alignment = <0x0 0x400000>;
 		};
 
-		ion_reserved:linux,ion-dev {
+		carveout_reserved:linux,carveout-reserve {
 			compatible = "amlogic, idev-mem";
 			size = <0x0 0x1000>;
 		};
+        cma_reserved:linux,cma-reserve {
+            compatible = "shared-dma-pool";
+            reusable;
+            alignment = <0x0 0x400000>;
+            size = <0x0 0x4000000>;
+        };
 
 		/*  vdin0 CMA pool */
 		//vdin0_cma_reserved:linux,vdin0_cma {
@@ -255,7 +261,7 @@
 
 	ion_dev {
 		compatible = "amlogic, ion_dev";
-		memory-region = <&ion_reserved>;
+		memory-region = <&cma_reserved>;
 	};
 
 	vdec {
