--- a/sound/soc/aml/m8/Makefile
+++ b/sound/soc/aml/m8/Makefile
@@ -7,10 +7,12 @@ snd-soc-aml-spdif-dai-objs  := aml_spdif_dai.o
 snd-soc-aml-hw-objs  := aml_audio_hw.o
 snd-soc-aml-hw-pcm2bt-objs  := aml_audio_hw_pcm.o
 snd-soc-aml-dmic-objs	:= aml_dmic.o
+snd-soc-aml_i2s2_dai-objs := aml_i2s2_dai.o
 
 obj-$(CONFIG_SND_AML_M8_SOC) += snd-soc-aml-pcm.o
 obj-$(CONFIG_SND_AML_M8_SOC) += snd-soc-aml-i2s.o
 obj-$(CONFIG_SND_AML_M8_SOC) += snd-soc-aml-i2s-dai.o
+obj-$(CONFIG_SND_AML_M8_SOC) += snd-soc-aml_i2s2_dai.o
 obj-$(CONFIG_SND_AML_M8_SOC) += snd-soc-aml-pcm-dai.o
 obj-$(CONFIG_SND_AML_M8_SOC) += snd-soc-aml-hw.o
 obj-$(CONFIG_SND_AML_M8_SOC) += aml_notify.o
