PD#147377: sdio: Increased support for sdio wifi sdr104
1. added support SDR104 bus mode in version3 controller

2. refixed the problem that cmd11 can't pull down

Change-Id: I6689db5ab3a568c32d2f61d4111ae1b61a3c7c0b
Signed-off-by: Long Yu <long.yu@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/txlx_t962e_r321.dts
+++ b/arch/arm64/boot/dts/amlogic/txlx_t962e_r321.dts
@@ -641,13 +641,13 @@
 	   		ocr_avail = <0x00200080>; // 3.3:0x200000, 1.8+3.3:0x00200080
 	   		caps = "MMC_CAP_4_BIT_DATA","MMC_CAP_MMC_HIGHSPEED","MMC_CAP_NONREMOVABLE",
 	   			"MMC_CAP_SD_HIGHSPEED",
-				"MMC_PM_KEEP_POWER";
+				"MMC_PM_KEEP_POWER",
 	   			//"MMC_CAP_UHS_SDR12",
 	   			//"MMC_CAP_UHS_SDR25",
 	   			//"MMC_CAP_UHS_SDR50",
-	   			//"MMC_CAP_UHS_SDR104";
+	   			"MMC_CAP_UHS_SDR104";
 	   		f_min = <400000>;
-	   		f_max = <100000000>;
+	   		f_max = <200000000>;
 			base =  <0xff634400>;
 	   		max_req_size = <0x20000>; /**128KB*/
 	   		card_type = <3>; /* 0:unknown, 1:mmc card(include eMMC), 2:sd card(include tSD), 3:sdio device(ie:sdio-wifi), 4:SD combo (IO+mem) card, 5:NON sdio device(means sd/mmc card), other:reserved */
