--- a/arch/arm64/boot/dts/amlogic/txl_p341.dts
+++ b/arch/arm64/boot/dts/amlogic/txl_p341.dts
@@ -22,6 +22,8 @@
 #include <dt-bindings/gpio/txl.h>
 #include <dt-bindings/gpio/gpio.h>
 #include <dt-bindings/reset/aml_txl.h>
+#include <dt-bindings/pwm/pwm.h>
+#include <dt-bindings/pwm/meson.h>
 
 #include "mesontxl.dtsi"
 #include "mesontxl_p341-panel.dtsi"
@@ -108,7 +110,7 @@
 		*/
 		ion_reserved:linux,ion-dev {
 			compatible = "amlogic, idev-mem";
-			size = <0x0 0x1000>;
+			size = <0x0 0x2000000>;
 		};
 
 		/*  POST PROCESS MANAGER */
@@ -120,7 +122,7 @@
 		codec_mm_cma:linux,codec_mm_cma {
 			compatible = "shared-dma-pool";
 			reusable;
-			size = <0x0 0x4400000>;
+			size = <0x0 0x10400000>;
 			alignment = <0x0 0x400000>;
 			linux,contiguous-region;
 		};
@@ -174,6 +176,35 @@
 		//	size = <0x0 0x00800000>;
 		//	alignment = <0x0 0x400000>;
 		//};
+	};
+
+	pwm {
+		compatible = "amlogic, meson-pwm";
+		status = "okay";
+		pwm-outputs 	= <PWM_A>,<PWM_B>,<PWM_C>,<PWM_D>,
+			      	  <PWM_E>,<PWM_F>,<PWM_AO_A>,<PWM_AO_B>;
+		pwm-outputs-new = <PWM_A>,<PWM_B>,<PWM_C>,<PWM_D>,
+				  <PWM_E>,<PWM_F>,<PWM_AO_A>,<PWM_AO_B>,
+			          <PWM_A2>,<PWM_B2>,<PWM_C2>,<PWM_D2>,
+			          <PWM_E2>,<PWM_F2>,<PWM_AO_A2>,<PWM_AO_B2>;
+		reg = <0x0 0xc1108550 0x0 0x30>,
+		      <0x0 0xc8100550  0x0 0x10>;
+		clocks = <&clock CLK_XTAL>,
+			 <&clock CLK_VID_PLL>,
+			 <&clock CLK_FPLL_DIV4>,
+			 <&clock CLK_FPLL_DIV3>;
+		clock-names = "xtal",
+			      "vid_pll_clk",
+			      "fclk_div4",
+			      "fclk_div3";
+		clock-select = <XTAL_CLK>,<XTAL_CLK>,<XTAL_CLK>,<XTAL_CLK>,
+			       	   <XTAL_CLK>,<XTAL_CLK>,<XTAL_CLK>,<XTAL_CLK>;
+		clock-select-new = <XTAL_CLK>,<XTAL_CLK>,<XTAL_CLK>,<XTAL_CLK>,
+		                   <XTAL_CLK>,<XTAL_CLK>,<XTAL_CLK>,<XTAL_CLK>,
+		                   <XTAL_CLK>,<XTAL_CLK>,<XTAL_CLK>,<XTAL_CLK>,
+		                   <XTAL_CLK>,<XTAL_CLK>,<XTAL_CLK>,<XTAL_CLK>;
+		                   /*all channels use the default clock source XTAL_CLK*/
+		                   /*and you can shoose it in file dt-bindings/pwm/meson.h*/
 	};
 
     adc_keypad{
@@ -245,6 +276,7 @@
 
 	codec_io {
 		compatible = "amlogic, codec_io";
+		status = "okay";
 		#address-cells=<2>;
 		#size-cells=<2>;
 		ranges;
@@ -378,15 +410,16 @@
 		compatible = "amlogic, vdin";
 		/*memory-region = <&vdin0_cma_reserved>;*/
 		dev_name = "vdin0";
-		status = "ok";
+		status = "okay";
 		reserve-iomap = "true";
 		flag_cma = <1>;/*1:share with codec_mm;2:cma alone*/
 		/*MByte, if 10bit disable: 64M(YUV422), if 10bit enable: 64*1.5 = 96M(YUV422)
 		*if support 4K2K-YUV444-10bit-WR:3840*2160*4*4 ~= 128M
+		*if support 4K2K-YUV444-10bit-WR:3840*2160*4*6 ~= 190M
 		*if support 4K2K-YUV422-10bit-wr:3840*2160*3*4 ~= 96M
 		*if support 4K2K-YUV422-8BIT-WR:3840*2160*2*4 ~= 64M
 		*if support 1080p-YUV422-8BIT-WR:1920*1080*2*4 ~= 16M*/
-		cma_size = <96>;
+		cma_size = <190>;
 		interrupts = <0 83 1>;
 		rdma-irq = <2>;
 		clocks = <&clock CLK_FPLL_DIV5>,
@@ -405,7 +438,7 @@
 		compatible = "amlogic, vdin";
 		memory-region = <&vdin1_cma_reserved>;
 		dev_name = "vdin1";
-		status = "ok";
+		status = "okay";
 		reserve-iomap = "true";
 		flag_cma = <0>;/*1:share with codec_mm;0:cma alone*/
 		interrupts = <0 85 1>;
@@ -425,7 +458,7 @@
 		compatible = "amlogic, tvafe";
 		/*memory-region = <&tvafe_cma_reserved>;*/
 		dev_name = "tvafe";
-		status = "ok";
+		status = "okay";
 		flag_cma = <1>;/*1:share with codec_mm;0:cma alone*/
 		cma_size = <5>;/*MByte*/
 		reg = <0x0 0xc8842000 0x0 0x2000>;
@@ -446,7 +479,6 @@
 		gamma_en = <1>;/*1:enabel ;0:disable*/
 		wb_en = <1>;/*1:enabel ;0:disable*/
 		cm_en = <1>;/*1:enabel ;0:disable*/
-		wb_sel = <1>;/*1:mtx ;0:gainoff*/
 	};
 
 	aml_atv_demod {
@@ -485,7 +517,7 @@
 			"xtal",
 			"fclk_div5";
 		hdmirx_id = <0>;
-		en_4k_2_2k = <0>;
+		en_4k_2_2k = <1>;
  	};
 
 	amvenc_avc {
@@ -564,11 +596,36 @@
 		};
 	};
 
+	sd {
+		compatible = "amlogic, aml_sd_emmc";
+		dev_name = "aml_newsd.0";
+		status = "okay";
+		reg = <0x0 0xd0072000 0x0 0x2000>;
+		interrupts = <	0 217 4>;
+		pinctrl-names = "sd_clk_cmd_pins", "sd_all_pins";
+		pinctrl-0 = <&sd_clk_cmd_pins>;
+		pinctrl-1 = <&sd_all_pins>;
+		sd {
+			status = "okay";
+	   		pinname = "sd";
+	   		ocr_avail = <0x00200080>; // 3.3:0x200000, 1.8+3.3:0x00200080
+			caps = "MMC_CAP_4_BIT_DATA","MMC_CAP_MMC_HIGHSPEED",
+	                             "MMC_CAP_SD_HIGHSPEED", "MMC_CAP_NONREMOVABLE",
+	                             "MMC_CAP_UHS_SDR12","MMC_CAP_UHS_SDR25",
+                                     "MMC_CAP_UHS_SDR50","MMC_CAP_UHS_SDR104",
+                                     "MMC_CAP_SDIO_IRQ";
+	   		f_min = <400000>;
+	   		f_max = <200000000>;
+	   		max_req_size = <0x20000>; /**128KB*/
+	   		card_type = <3>; /* 0:unknown, 1:mmc card(include eMMC), 2:sd card(include tSD), 3:sdio device(ie:sdio-wifi), 4:SD combo (IO+mem) card, 5:NON sdio device(means sd/mmc card), other:reserved */
+		};
+	};
+
 	unifykey {
 		compatible = "amlogic, unifykey";
-		status = "ok";
+		status = "okay";
 
-		unifykey-num = <14>;
+		unifykey-num = <16>;
 		unifykey-index-0 = <&keysn_0>;
 		unifykey-index-1 = <&keysn_1>;
 		unifykey-index-2 = <&keysn_2>;
@@ -583,6 +640,8 @@
 		unifykey-index-11 = <&keysn_11>;
 		unifykey-index-12 = <&keysn_12>;
 		unifykey-index-13 = <&keysn_13>;
+		unifykey-index-14 = <&keysn_14>;
+		unifykey-index-15 = <&keysn_15>;
 
 		keysn_0: key_0{
 			key-name = "usid";
@@ -659,7 +718,17 @@
 			key-type  = "sha1";
 			key-permit = "read","write","del";
 		};
-	};//End unifykey
+                keysn_14:key_14{
+                        key-name = "prpubkeybox";// PlayReady
+                        key-device = "secure";
+                        key-permit = "read","write","del";
+                };
+                keysn_15:key_15{
+                        key-name = "prprivkeybox";// PlayReady
+                        key-device = "secure";
+                        key-permit = "read","write","del";
+                };
+        };//End unifykey
 
 	aocec: aocec {
 		compatible = "amlogic, amlogic-aocec";
