PD#148857: dts: add some memory to fb/logo.[1/1]
1. modify tri buffer to double buffer, fb0 memory need 16M.
2. fb1 memory size is logo size. 1080p/16bit logo size is 3.95M
so fb0 + fb1 is 20M.
if user need 1080p/24bit, and patch as follows:
reg = <0x0 0x7ea00000 0x0 0x1600000>;
logo_addr = "0x7fa00000";

if user need 1080p/32bit, and patch as follows:
reg = <0x0 0x7e800000 0x0 0x1800000>;
logo_addr = "0x7f800000";

Change-Id: I1ead94eabd51fa24821b86da00e8a61be9f83ff1
Signed-off-by: Luan Yuan <luan.yuan@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/txlx_t962e_r321.dts
+++ b/arch/arm64/boot/dts/amlogic/txlx_t962e_r321.dts
@@ -74,7 +74,7 @@
 
 		fb_reserved:linux,meson-fb {
 			compatible = "amlogic, fb-memory";
-			reg = <0x0 0x7ee00000 0x0 0x1100000>;
+			reg = <0x0 0x7ec00000 0x0 0x1400000>;
 			no-map;
 		};
 		/*di reserved mem*/
@@ -257,7 +257,7 @@
 		scale_mode = <1>; /** 0:VPU free scale 1:OSD free scale 2:OSD super scale */
 		display_size_default = <1920 1080 1920 2160 32>; //1920*1080*4*2 = 0xFD2000
 		pxp_mode = <0>; /** 0:normal mode 1:pxp mode */
-		logo_addr = "0x7f800000";
+		logo_addr = "0x7fc00000";
 	};
 
 	ge2d {
