--- a/arch/arm64/Makefile
+++ b/arch/arm64/Makefile
@@ -68,14 +68,9 @@ endif
 
 KBUILD_DTBS	:= dtbs
 
-all:	$(KBUILD_IMAGE) $(KBUILD_DTBS) showtime
+all:	$(KBUILD_IMAGE) $(KBUILD_DTBS)
 
 boot := arch/arm64/boot
-
-showtime:
-	@echo -en '\t\tBuild time: '
-	@date
-	@echo -e '\t\tKhadas: Something a little different!\n'
 
 Image Image.gz Image.lzo: vmlinux
 	$(Q)$(MAKE) $(build)=$(boot) $(boot)/$@
@@ -83,10 +78,10 @@ Image Image.gz Image.lzo: vmlinux
 zinstall install: vmlinux
 	$(Q)$(MAKE) $(build)=$(boot) $@
 
-%.dtb: scripts showtime
+%.dtb: scripts
 	$(if $(filter $@,$(mesondtb)),\
 	$(Q)$(MAKE) $(build)=$(boot)/dts/amlogic $(boot)/dts/amlogic/$@,\
-	$(Q)$(MAKE) $(build)=$(boot)/dts $(boot)/dts/$@)
+	$(Q)$(MAKE) $(build)=customer/$(boot)/dts customer/$(boot)/dts/$@)
 
 dtbs: scripts
 	$(Q)$(MAKE) $(build)=$(boot)/dts dtbs
