--- a/arch/arm64/boot/dts/Makefile
+++ b/arch/arm64/boot/dts/Makefile
@@ -1,7 +1,10 @@
-dtb-$(CONFIG_ARCH_VEXPRESS) += rtsm_ve-aemv8a.dtb foundation-v8.dtb \
-				fvp-base-gicv2-psci.dtb
-dtb-$(CONFIG_ARCH_XGENE) += apm-mustang.dtb
-dtb-$(CONFIG_ARCH_VEXPRESS) += juno.dtb
+dtb-$(CONFIG_ARM64) += 	kvim_nougat.dtb \
+			kvim_multios.dtb \
+			kvim2_nougat.dtb \
+			kvim2_dualos.dtb \
+			kvim2_multios.dtb \
+			kvim2_libreelec.dtb \
+			kvim2_linux.dtb
 
 targets += dtbs
 
