--- a/arch/arm64/boot/dts/kvim.dts
+++ b/arch/arm64/boot/dts/kvim.dts
@@ -22,7 +22,7 @@
 #include <dt-bindings/gpio/gxl.h>
 #include <dt-bindings/gpio/gpio.h>
 #include <dt-bindings/reset/aml_gxl.h>
-#include "amlogic/mesongxl.dtsi"
+#include "mesongxl.dtsi"
 #include "partitions.dtsi"
 / {
 	model = "Amlogic";
