CONFIG: add LED

--- a/arch/arm64/configs/kvim_defconfig
+++ b/arch/arm64/configs/kvim_defconfig
@@ -262,6 +262,13 @@ CONFIG_FB_OSD_VSYNC_RDMA=y
 CONFIG_FB_OSD2_ENABLE=y
 CONFIG_AM_GE2D=y
 CONFIG_AM_LOGO=y
+CONFIG_AMLOGIC_LED=y
+CONFIG_AML_LED_SYS=y
+CONFIG_AML_LED_PWM=y
+CONFIG_AML_LED_TRIGGER_BREATHE=y
+CONFIG_AML_LED_TRIGGER_SCPI=y
+CONFIG_AML_LED_TRIGGER_SCPISTOP=y
+CONFIG_AML_LED_TRIGGER_DISTURB=y
 CONFIG_AML_CANVAS=y
 CONFIG_AMLOGIC_CLK=y
 CONFIG_AMLOGIC_SEC=y
