--- a/arch/arm64/boot/dts/Makefile
+++ b/arch/arm64/boot/dts/Makefile
@@ -1,10 +1,11 @@
-dtb-$(CONFIG_ARM64) += 	kvim_nougat.dtb \
+dtb-$(CONFIG_ARM64) += 	kvim_libreelec.dtb \
+			kvim_nougat.dtb \
+			kvim_linux.dtb \
 			kvim_multios.dtb \
-			kvim2_nougat.dtb \
-			kvim2_dualos.dtb \
-			kvim2_multios.dtb \
 			kvim2_libreelec.dtb \
-			kvim2_linux.dtb
+			kvim2_nougat.dtb \
+			kvim2_linux.dtb \
+			kvim2_multios.dtb
 
 targets += dtbs
 
