--- a/arch/arm64/boot/dts/kvim_linux.dts
+++ b/arch/arm64/boot/dts/kvim_linux.dts
@@ -1,5 +1,5 @@
 /*
- * arch/arm64/boot/dts/amlogic/gxl_skt.dts
+ * arch/arm64/boot/dts/kvim.dts
  *
  * Copyright (C) 2015 Amlogic, Inc. All rights reserved.
  *
@@ -25,8 +25,10 @@
 #include <dt-bindings/pwm/pwm.h>
 #include <dt-bindings/pwm/meson.h>
 #include "mesongxl.dtsi"
+#include "partitions-linux.dtsi"
 / {
 	model = "Amlogic";
+	amlogic-dt-id = "kvim";
 	compatible = "amlogic, Gxbb";
 	interrupt-parent = <&gic>;
 	#address-cells = <2>;
@@ -42,7 +44,7 @@
 
 	memory@00000000 {
 		device_type = "memory";
-		linux,usable-memory = <0x0 0x1000000 0x0 0x3f000000>;
+		linux,usable-memory = <0x0 0x100000 0x0 0x7ff00000>;
 	};
 
 	reserved-memory {
@@ -68,7 +70,7 @@
 		};
 		fb_reserved:linux,meson-fb {
 			compatible = "amlogic, fb-memory";
-			size = <0x0 0x2000000>;
+			reg = <0x0 0x7e000000 0x0 0x2000000>;
 			no-map;
 		};
 
@@ -78,10 +80,14 @@
 			size = <0x0 0x1e00000>;
 			//no-map;
 		};
+		chunk_reserved:linux,chunk-reserve {
+			compatible = "amlogic, chunk-reserve";
+			size = <0x0 0x4000000>;
+		};
 
 		ion_reserved:linux,ion-dev {
 			compatible = "amlogic, idev-mem";
-			size = <0x0 0x2000000>;
+			size = <0x0 0x3000000>;
 		};
 
 		/*  vdin0 CMA pool */
@@ -103,18 +109,17 @@
 		};
 		/*  POST PROCESS MANAGER */
 		ppmgr_reserved:linux,ppmgr {
-			compatible = "amlogic, ppmgr_memory";
-			size = <0x0 0x2000000>;
+			compatible = "shared-dma-pool";
+			size = <0x0 0x0>;
 		};
 
 		codec_mm_cma:linux,codec_mm_cma {
 			compatible = "shared-dma-pool";
 			reusable;
-			size = <0x0 0xbc00000>;
+			size = <0x0 0xc000000>;
 			alignment = <0x0 0x400000>;
 			linux,contiguous-region;
 		};
-
 		picdec_cma_reserved:linux,picdec {
 			compatible = "shared-dma-pool";
 			reusable;
@@ -140,7 +145,14 @@
 		compatible = "amlogic, sysled";
 		dev_name = "sysled";
 		status = "okay";
-		led_gpio = <&gpio GPIODV_24 GPIO_ACTIVE_LOW>;
+		led_gpio = <&gpio_ao GPIOAO_9 GPIO_ACTIVE_HIGH>;
+		led_active_low = <1>;
+	};
+
+	chunk-reserve {
+		compatible = "amlogic, chunk-reserve";
+		memory-region = <&chunk_reserved>;
+		status = "okay";
 	};
 
 	meson-vout {
@@ -156,11 +168,11 @@
 		interrupts = <0 3 1
 			0 89 1>;
 		interrupt-names = "viu-vsync", "rdma";
-		mem_size = <0x01800000 0x00100000>; /* fb0/fb1 memory size */
+		mem_size = <0x01851000 0x00100000>; /* fb0/fb1 memory size */
 		display_mode_default = "1080p60hz";
 		scale_mode = <1>; /** 0:VPU free scale 1:OSD free scale 2:OSD super scale */
 		display_size_default = <1920 1080 1920 3240 32>; //1920*1080*4*3 = 0x17BB000
-		logo_addr = "0x3d851000";
+		logo_addr = "0x7f851000";
 	};
 	ge2d {
 		compatible = "amlogic, ge2d";
@@ -205,23 +217,23 @@
 			dev_name = "codec_mm";
 			status = "okay";
 	};
-			ethmac: ethernet@0xc9410000 {
-						compatible = "amlogic, gxbb-rmii-dwmac";
-						reg = <0x0 0xc9410000 0x0 0x10000
-						0x0 0xc8834540 0x0 0x8
-						0x0 0xc8834558 0x0 0xc>;
-						interrupts = <0 8 1>;
-						phy-mode= "rmii";
-						pinctrl-names = "internal_eth_pins";
-						pinctrl-0 = <&internal_eth_pins>;
-						mc_val = <0x1800>;
-						resets = <&clock GCLK_IDX_ETHERNET>;
-						reset-names = "ethpower";
-						interrupt-names = "macirq";
-						clocks = <&clock CLK_81>;
-						clock-names = "ethclk81";
-						internal_phy=<1>;
-						wol=<0>;
+  ethmac: ethernet@0xc9410000 {
+			compatible = "amlogic, gxbb-rmii-dwmac";
+			reg = <0x0 0xc9410000 0x0 0x10000
+			0x0 0xc8834540 0x0 0x8
+			0x0 0xc8834558 0x0 0xc>;
+			interrupts = <0 8 1
+						  0 9 1>;
+			phy-mode= "rmii";
+			mc_val = <0x1800>;
+			resets = <&clock GCLK_IDX_ETHERNET>;
+			reset-names = "ethpower";
+			interrupt-names = "macirq",
+							  "phyirq";
+			clocks = <&clock CLK_81>;
+			clock-names = "ethclk81";
+			internal_phy=<1>;
+			wol=<0>;
     };
 	mesonstream {
 		compatible = "amlogic, codec, streambuf";
@@ -395,11 +407,12 @@
 			3: 250.0M    4: 333.3M    5: 400.0M
 			6: 500.0M    7: 666.7M */
 	};
+	//if use bt, open it
 	bt-dev{
 		compatible = "amlogic, bt-dev";
 		dev_name = "bt-dev";
-		status = "disabled";
-		gpio_reset = <&gpio       GPIOX_18       GPIO_ACTIVE_HIGH>;
+		status = "okay";
+		gpio_reset = <&gpio       GPIOX_17       GPIO_ACTIVE_HIGH>;
 	};
 
 	rtc{
@@ -416,11 +429,14 @@
 		status = "okay";
 		interrupt_pin = <&gpio       GPIOX_7       GPIO_ACTIVE_HIGH>;
 		interrupts = <	0 68 4>;
-		irq_trigger_type = "GPIO_IRQ_HIGH";
+		irq_trigger_type = "GPIO_IRQ_LOW";
 		power_on_pin = <&gpio       GPIOX_6       GPIO_ACTIVE_HIGH>;
+		dhd_static_buf;    //if use bcm wifi, config dhd_static_buf and 32k as bellow
+		pinctrl-names = "wifi_32k_pins";
+		pinctrl-0 = <&wifi_32k_pins>;
 		pwm_config = <&wifi_pwm_conf>;
 	};
- 	wifi_pwm_conf:wifi_pwm_conf{
+	wifi_pwm_conf:wifi_pwm_conf{
 		pwm_channel1 = <PWM_E>;
 		pwm_channel2 = <PWM_E2>;
 		pwm_channel1_conf = <30541 15270 6>;
@@ -442,6 +458,7 @@
 			caps = "MMC_CAP_8_BIT_DATA","MMC_CAP_MMC_HIGHSPEED",
 				 "MMC_CAP_SD_HIGHSPEED", "MMC_CAP_NONREMOVABLE","MMC_CAP_1_8V_DDR",
 				 "MMC_CAP_HW_RESET", "MMC_CAP_ERASE", "MMC_CAP_CMD23";
+			caps2 = "MMC_CAP2_HS200", "MMC_CAP2_HS400";
 			f_min = <300000>;
 			f_max = <100000000>;
 			max_req_size = <0x20000>;          /**256KB*/
@@ -473,17 +490,16 @@
 	   		pinname = "sd";
 	   		ocr_avail = <0x00200080>; // 3.3:0x200000, 1.8+3.3:0x00200080
 	   		caps = "MMC_CAP_4_BIT_DATA","MMC_CAP_MMC_HIGHSPEED",
-				"MMC_CAP_SD_HIGHSPEED", "MMC_CAP_UHS_SDR12",
-				"MMC_CAP_UHS_SDR25","MMC_CAP_UHS_SDR50", "MMC_CAP_UHS_SDR104";
+					"MMC_CAP_SD_HIGHSPEED";
+	   				//"MMC_CAP_UHS_SDR12",
+	   				//"MMC_CAP_UHS_SDR25","MMC_CAP_UHS_SDR50",
+	   				//"MMC_CAP_UHS_SDR104";
 	   		f_min = <400000>;
 	   		f_max = <100000000>;
 	   		max_req_size = <0x20000>;          /**128KB*/
 			gpio_dat3 = <&gpio       CARD_4       GPIO_ACTIVE_HIGH>;
 			jtag_pin =  <&gpio       CARD_0       GPIO_ACTIVE_HIGH>;
 			gpio_cd =  <&gpio       CARD_6       GPIO_ACTIVE_HIGH>;
-			/*if card have no switch gpio, remove all relative to vol_switch */
-			vol_switch =  <&gpio       GPIODV_26       GPIO_ACTIVE_HIGH>;
-			vol_switch_18 = <1>; /* 1 = high, 0 = low */
 			irq_in = <3>;
 			irq_out = <5>;
 	   		card_type = <5>; /* 0:unknown, 1:mmc card(include eMMC), 2:sd card(include tSD), 3:sdio device(ie:sdio-wifi), 4:SD combo (IO+mem) card, 5:NON sdio device(means sd/mmc card), other:reserved */
@@ -557,80 +573,11 @@
 						status = "okay";
 					};
 	};*/
-	partitions: partitions{
-        parts = <10>;
-		part-0 = <&logo>;
-		part-1 = <&recovery>;
-		part-2 = <&rsv>;
-		part-3 = <&tee>;
-		part-4 = <&crypt>;
-		part-5 = <&misc>;
-		part-6 = <&boot>;
-		part-7 = <&system>;
-		part-8 = <&cache>;
-		part-9 = <&data>;
-
-		logo:logo{
-			pname = "logo";
-			size = <0x0 0x2000000>;
-			mask = <1>;
-		};
-		recovery:recovery{
-			pname = "recovery";
-			size = <0x0 0x2000000>;
-			mask = <1>;
-		};
-		rsv:rsv{
-			pname = "rsv";
-			size = <0x0 0x800000>;
-			mask = <1>;
-		};
-		tee:tee{
-			pname = "tee";
-			size = <0x0 0x800000>;
-			mask = <1>;
-		};
-		crypt:crypt{
-			pname = "crypt";
-			size = <0x0 0x2000000>;
-			mask = <1>;
-		};
-		misc:misc{
-			pname = "misc";
-			size = <0x0 0x2000000>;
-			mask = <1>;
-		};
-
-		boot:boot
-		{
-			pname = "boot";
-			size = <0x0 0x2000000>;
-			mask = <1>;
-		};
-		system:system
-		{
-			pname = "system";
-			size = <0x0 0x40000000>;
-			mask = <1>;
-		};
-		cache:cache
-		{
-			pname = "cache";
-			size = <0x0 0x20000000>;
-			mask = <2>;
-		};
-		data:data
-		{
-			pname = "data";
-			size = <0xffffffff 0xffffffff>;
-			mask = <4>;
-		};
-	};
 	unifykey{
 		compatible = "amlogic, unifykey";
 		status = "ok";
 
-		unifykey-num = <11>;
+		unifykey-num = <14>;
 		unifykey-index-0 = <&keysn_0>;
 		unifykey-index-1 = <&keysn_1>;
 		unifykey-index-2 = <&keysn_2>;
@@ -642,6 +589,9 @@
 		unifykey-index-8 = <&keysn_8>;
 		unifykey-index-9 = <&keysn_9>;
 		unifykey-index-10= <&keysn_10>;
+		unifykey-index-11= <&keysn_11>;
+		unifykey-index-12= <&keysn_12>;
+		unifykey-index-13= <&keysn_13>;
 
                 keysn_0: key_0{
 			key-name = "usid";
@@ -689,7 +639,6 @@
 		keysn_8:key_8{
 			key-name = "widevinekeybox";
 			key-device = "secure";
-			key-type = "sha1";
 			key-permit = "read","write","del";
 		};
 		keysn_9:key_9{
@@ -699,6 +648,21 @@
 		};
 		keysn_10:key_10{
 			key-name = "hdcp22_fw_private";
+			key-device = "secure";
+			key-permit = "read","write","del";
+		};
+		keysn_11:key_11{
+			key-name = "PlayReadykeybox25";
+			key-device = "secure";
+			key-permit = "read","write","del";
+		};
+		keysn_12:key_12{
+			key-name = "prpubkeybox";// PlayReady
+			key-device = "secure";
+			key-permit = "read","write","del";
+		};
+		keysn_13:key_13{
+			key-name = "prprivkeybox";// PlayReady
 			key-device = "secure";
 			key-permit = "read","write","del";
 		};
@@ -781,7 +745,7 @@
 		compatible = "amlogic, meson-uart";
 		reg = <0x0 0xc11084c0 0x0 0x18>;
 		interrupts = <0 26 1>;
-		status = "disable";
+		status = "okay";
 		clocks = <&clock CLK_XTAL>;
 		clock-names = "clk_uart";
 		fifosize = < 128 >;
@@ -817,7 +781,7 @@
 		compatible = "amlogic, meson-uart";
 		reg = <0x0 0xc81004e0 0x0 0x18>;
 		interrupts = <0 197 1>;
-		status = "disable";
+		status = "okay";
 		clocks = <&clock CLK_XTAL>;
 		clock-names = "clk_uart";
 		fifosize = < 64 >;
@@ -878,7 +842,7 @@
 		port-id-mode = <0>; /** 0: hardware, 1: sw_host, 2: sw_slave*/
 		usb-fifo = <728>;
 		cpu-type = "gxl";
-		controller-type = <1>; /** 0: normal, 1: otg+dwc3 host only, 2: otg+dwc3 device only*/
+		controller-type = <2>; /** 0: normal, 1: otg+dwc3 host only, 2: otg+dwc3 device only*/
 		phy-reg = <0xd0078000>;
 		phy-reg-size = <0xa0>;
 		resets = <&clock GCLK_IDX_USB_GENERAL
@@ -991,12 +955,11 @@
 				"Ext Spk","LOUTL",
 				"Ext Spk","LOUTR";
 
-		mute_gpio-gpios = <&gpio GPIOH_5 0>;
 		mute_inv;
+		sleep_time = <100>;
 		hp_disable;
 		hp_paraments = <800 300 0 5 1>;
 		pinctrl-names = "aml_snd_m8";
-		pinctrl-0 = <&audio_pins>;
 		cpu_list = <&cpudai0 &cpudai1 &cpudai2>;
 		codec_list = <&codec0 &codec1 &codec2>;
 		plat_list = <&i2s_plat &i2s_plat &pcm_plat>;
@@ -1025,11 +988,11 @@
 		compatible = "amlogic, meson-pwm";
 		status = "okay";
 		pwm-outputs 	= <PWM_A>,<PWM_B>,<PWM_C>,<PWM_D>,
-			      	  <PWM_E>,<PWM_F>,<PWM_AO_A>,<PWM_AO_B>;
+						<PWM_E>,<PWM_F>,<PWM_AO_A>,<PWM_AO_B>;
 		pwm-outputs-new = <PWM_A>,<PWM_B>,<PWM_C>,<PWM_D>,
-				  <PWM_E>,<PWM_F>,<PWM_AO_A>,<PWM_AO_B>,
-			          <PWM_A2>,<PWM_B2>,<PWM_C2>,<PWM_D2>,
-			          <PWM_E2>,<PWM_F2>,<PWM_AO_A2>,<PWM_AO_B2>;
+						<PWM_E>,<PWM_F>,<PWM_AO_A>,<PWM_AO_B>,
+						<PWM_A2>,<PWM_B2>,<PWM_C2>,<PWM_D2>,
+						<PWM_E2>,<PWM_F2>,<PWM_AO_A2>,<PWM_AO_B2>;
 		reg = <0x0 0xc1108550 0x0 0x30>,
 		      <0x0 0xc8100550  0x0 0x10>;
 		clocks = <&clock CLK_XTAL>,
@@ -1041,13 +1004,35 @@
 			      "fclk_div4",
 			      "fclk_div3";
 		clock-select = <XTAL_CLK>,<XTAL_CLK>,<XTAL_CLK>,<XTAL_CLK>,
-			       	   <XTAL_CLK>,<XTAL_CLK>,<XTAL_CLK>,<XTAL_CLK>;
+					<XTAL_CLK>,<XTAL_CLK>,<XTAL_CLK>,<XTAL_CLK>;
 		clock-select-new = <XTAL_CLK>,<XTAL_CLK>,<XTAL_CLK>,<XTAL_CLK>,
 		                   <XTAL_CLK>,<XTAL_CLK>,<XTAL_CLK>,<XTAL_CLK>,
 		                   <XTAL_CLK>,<XTAL_CLK>,<XTAL_CLK>,<XTAL_CLK>,
 		                   <XTAL_CLK>,<XTAL_CLK>,<XTAL_CLK>,<XTAL_CLK>;
 		                   /*all channels use the default clock source XTAL_CLK*/
 		                   /*and you can shoose it in file dt-bindings/pwm/meson.h*/
+	};
+
+	gpio_keypad{
+		compatible = "amlogic, gpio_keypad";
+		status = "okay";
+		scan_period = <20>;
+		key_num = <1>;
+		key_name = "power";
+		key_code = <116>;
+		key_pin = <&gpio_ao  GPIOAO_2  GPIO_ACTIVE_HIGH>;  /*"GPIOAO_2";*/
+		irq_keyup = <6>;
+		irq_keydown = <7>;
+	};
+	adc_keypad{
+		compatible = "amlogic, adc_keypad";
+		status = "okay";
+		key_name = "home";
+		key_num = <1>;
+		key_code = <300>;
+		key_chan = <0>;
+		key_val = <10>;
+		key_tolerance = <40>;
 	};
 
 	aml_sensor0: aml-sensor@0 {
@@ -1172,25 +1157,18 @@
 	status = "okay";
 };
 &audio_data{
-	status = "disabled";
+	status = "okay";
 };
 &defendkey {
 	status = "okay";
 };
-
-&spicc{
-	status = "disabled";
-	pinctrl-names = "spicc_pulldown","spicc_pullup";
-	pinctrl-0 = <&spicc_pulldown_x8x9x11 &spicc_pins_x8x9x11>;
-	pinctrl-1 = <&spicc_pullup_x8x9x11 &spicc_pins_x8x9x11>;
-	num_chipselect = <1>;
-	cs-gpios = <&gpio GPIOX_10 GPIO_ACTIVE_HIGH>;
-	dma_en = <0>;
-	dma_tx_threshold = <3>;
-	dma_rx_threshold = <3>;
-	dma_num_per_read_burst = <3>;
-	dma_num_per_write_burst = <3>;
-	delay_control = <0x15>;
-	ssctl = <0>;
+&i2c_a {
+	status = "okay";
 };
-
+&i2c_b {
+	status = "okay";
+	kvim_hym8563{
+		compatible = "kvim_hym8563";
+		reg = <0x51>;
+	};
+};
