CPUFREQ: use gp1 pll for cpufreq. [1/1]
PD#SWPL-3826

Problem:
use gp1 pll for cpufreq.

Solution:
use gp1 pll for cpufreq.

Verify:
x301_tl1

Change-Id: Iefb6d31ec40ba304f41024e4b7adceec881d043e
Signed-off-by: Hong Guo <hong.guo@amlogic.com>
Signed-off-by: Luan Yuan <luan.yuan@amlogic.com>

--- a/arch/arm/boot/dts/amlogic/mesontl1.dtsi
+++ b/arch/arm/boot/dts/amlogic/mesontl1.dtsi
@@ -52,6 +52,8 @@
 				"dsu_clk",
 				"dsu_pre_parent";
 			operating-points-v2 = <&cpu_opp_table0>;
+			/*set dynamic gp1 clk to val * 1000 *1000*/
+			dynamic_gp1_clk = <1000>;
 			cpu-supply = <&vddcpu0>;
 			//cpu-idle-states = <&SYSTEM_SLEEP_0>;
 		};
@@ -73,6 +75,8 @@
 				"dsu_clk",
 				"dsu_pre_parent";
 			operating-points-v2 = <&cpu_opp_table0>;
+			/*set dynamic gp1 clk to val * 1000 *1000*/
+			dynamic_gp1_clk = <1000>;
 			cpu-supply = <&vddcpu0>;
 			//cpu-idle-states = <&SYSTEM_SLEEP_0>;
 		};
@@ -94,6 +98,8 @@
 				"dsu_clk",
 				"dsu_pre_parent";
 			operating-points-v2 = <&cpu_opp_table0>;
+			/*set dynamic gp1 clk to val * 1000 *1000*/
+			dynamic_gp1_clk = <1000>;
 			cpu-supply = <&vddcpu0>;
 			//cpu-idle-states = <&SYSTEM_SLEEP_0>;
 		};
@@ -115,6 +121,8 @@
 				"dsu_clk",
 				"dsu_pre_parent";
 			operating-points-v2 = <&cpu_opp_table0>;
+			/*set dynamic gp1 clk to val * 1000 *1000*/
+			dynamic_gp1_clk = <1000>;
 			cpu-supply = <&vddcpu0>;
 			//cpu-idle-states = <&SYSTEM_SLEEP_0>;
 		};
