dts: update s905x3 vddcpu pwm to 30 steps [1/1]
PD#SWPL-11792

Problem:
update s905x3 vddcpu pwm to 30 steps

Solution:
update s905x3 vddcpu pwm to 30 steps

Verify:
test pass on S905X3_AC213

Change-Id: I30bfe855e3bb0a4b0a33f6d9029a718b7de68829
Signed-off-by: Hong Guo <hong.guo@amlogic.com>
Signed-off-by: Luan Yuan <luan.yuan@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/sm1_s905x3_ac213.dts
+++ b/arch/arm64/boot/dts/amlogic/sm1_s905x3_ac213.dts
@@ -1071,6 +1071,45 @@
 
 }; /* end of / */
 
+&vddcpu0 {
+	pwms = <&pwm_AO_cd MESON_PWM_1 1250 0>;
+	regulator-min-microvolt = <720000>;
+	regulator-max-microvolt = <1020000>;
+	max-duty-cycle = <1250>;
+	/* Voltage Duty-Cycle */
+	voltage-table = <1020000 0>,
+		<1010000 3>,
+		<1000000 6>,
+		<990000 10>,
+		<980000 13>,
+		<970000 16>,
+		<960000 20>,
+		<950000 23>,
+		<940000 26>,
+		<930000 30>,
+		<920000 33>,
+		<910000 36>,
+		<900000 40>,
+		<890000 43>,
+		<880000 46>,
+		<870000 50>,
+		<860000 53>,
+		<850000 56>,
+		<840000 60>,
+		<830000 63>,
+		<820000 67>,
+		<810000 70>,
+		<800000 73>,
+		<790000 76>,
+		<780000 80>,
+		<770000 83>,
+		<760000 86>,
+		<750000 90>,
+		<740000 93>,
+		<730000 96>,
+		<720000 100>;
+};
+
 &meson_fb {
 	status = "okay";
 	display_size_default = <1920 1080 1920 2160 32>;
