--- a/arch/arm/boot/dts/amlogic/kvim3.dts
+++ b/arch/arm/boot/dts/amlogic/kvim3.dts
@@ -969,7 +969,7 @@
 		interrupt-names = "irq_spdifin";
 		pinctrl-names = "spdif_pins",
 					"spdif_pins_mute";
-		pinctrl-0 = <&spdifout &spdifin>;
+		pinctrl-0 = <&spdifout>;
 		pinctrl-1 = <&spdifout_a_mute>;
 		status = "okay";
 	};
@@ -1177,14 +1177,6 @@
 		};
 	};
 
-	/* GPIOH_4 */
-	spdifout: spdifout {
-		mux {
-			groups = "spdif_out_h";
-			function = "spdif_out";
-		};
-	};
-
 	pdmin: pdmin {
 		mux { /* gpioa_5, gpioa_6, gpioa_7, gpioa_8, gpioa_9*/
 			groups = "pdm_din0_a",
@@ -1206,8 +1198,15 @@
 }; /* end of pinctrl_periphs */
 
 &pinctrl_aobus {
+	spdifout: spdifout {
+		mux { /* gpioao_10 */
+			groups = "spdif_out_ao";
+			function = "spdif_out_ao";
+		};
+	};
+
 	spdifout_a_mute: spdifout_a_mute {
-		mux { /* gpiao_10 */
+		mux { /* gpioao_10 */
 			groups = "GPIOAO_10";
 			function = "gpio_aobus";
 		};
