--- a/arch/arm/boot/dts/amlogic/kvim3l.dts
+++ b/arch/arm/boot/dts/amlogic/kvim3l.dts
@@ -18,7 +18,7 @@
 /dts-v1/;
 
 #include "mesonsm1.dtsi"
-#include "partition_mbox_normal.dtsi"
+#include "partition_mbox_normal_P_32.dtsi"
 #include "mesonsm1_skt-panel.dtsi"
 
 / {
@@ -1084,7 +1084,8 @@
 		reg = <0x18>;
 		fan,trig_temp_level0 = <50>;
 		fan,trig_temp_level1 = <60>;
-		fan,trig_temp_level2 = <70>;
+		fan,trig_temp_level2 = <65>;
+		fan,trig_temp_level3 = <70>;
 		hwver = "VIM3.V11";
 	};
 
