--- a/arch/arm/boot/dts/amlogic/sm1_s905d3_ac200.dts
+++ b/arch/arm/boot/dts/amlogic/sm1_s905d3_ac200.dts
@@ -1732,9 +1732,10 @@
 			 "MMC_CAP_ERASE",
 			 "MMC_CAP_CMD23",
 			 "MMC_CAP_DRIVER_TYPE_D";
-		caps2 = "MMC_CAP2_HS200", "MMC_CAP2_HS400";
+		caps2 = "MMC_CAP2_HS200";
+		/*MMC_CAP2_HS400"*/
 		f_min = <400000>;
-		f_max = <166666666>;
+		f_max = <200000000>;
 	};
 };
 
