drm: sync amlogic-4.9 to amlogic-5.4 branch [1/1]
PD#SWPL-35567

Problem:
need sync amlogic-4.9 to amlogic-5.4

Solution:
sync amlogic-4.9 to amlogic-5.4

Verify:
none

Change-Id: I005f072c372fc93d01fc5ad5a619d4fd648dc730
Signed-off-by: Ao Xu <ao.xu@amlogic.com>

--- a/arch/arm/boot/dts/amlogic/Makefile
+++ b/arch/arm/boot/dts/amlogic/Makefile
@@ -2,4 +2,6 @@ dtb-$(CONFIG_ARCH_MESON) += sm1_s905x3_ac213.dtb
 dtb-$(CONFIG_ARCH_MESON) += sm1_s905x3_ac214.dtb
 dtb-$(CONFIG_ARCH_MESON) += tm2_t962e2_ab311.dtb
 dtb-$(CONFIG_ARCH_MESON) += sc2_s905x4_ah219.dtb
+dtb-$(CONFIG_ARCH_MESON) += sc2_s905x4_ah219_drm.dtb
 dtb-$(CONFIG_ARCH_MESON) += sc2_s905x4_ah212.dtb
+dtb-$(CONFIG_ARCH_MESON) += sc2_s905x4_ah212_drm.dtb
