--- a/arch/arm64/boot/dts/amlogic/Makefile
+++ b/arch/arm64/boot/dts/amlogic/Makefile
@@ -5,7 +5,9 @@ dtb-y += meson-a1-ad401.dtb
 dtb-y += tm2_t962e2_ab311.dtb
 dtb-y += t7_pxp.dtb
 dtb-y += sc2_s905x4_ah212.dtb
+dtb-y += sc2_s905x4_ah212_drm.dtb
 dtb-y += sc2_s905x4_ah219.dtb
+dtb-y += sc2_s905x4_ah219_drm.dtb
 dtb-y += t5d_t950d4_am301_1g.dtb
 dtb-y += t5d_t950d4_am301_1.5g.dtb
 dtb-y += t5d_t950x4_am311_1g.dtb
