--- a/arch/arm64/configs/kvims_defconfig
+++ b/arch/arm64/configs/kvims_defconfig
@@ -298,6 +298,7 @@ CONFIG_AMLOGIC_ION=y
 CONFIG_AMLOGIC_MEDIA_RDMA=y
 CONFIG_AMLOGIC_MEDIA_VSYNC_RDMA=y
 CONFIG_AMLOGIC_MEDIA_VFM=y
+CONFIG_AMLOGIC_MEDIA_VFM_GRABBER=y
 CONFIG_AMLOGIC_VPU=y
 CONFIG_AMLOGIC_VIDEOBUF_RESOURCE=y
 CONFIG_AMLOGIC_MEDIA_VIDEO=y
