dolbyfw: support dolbyfw driver. [1/1]
PD#SWPL-38279

Problem:
dolbyfw ms12 2.4 support

Solution:
support dolbyfw driver

Verify:
AH212

Change-Id: I65f840b22abf8740e2cf1c74703d6217282fa721
Signed-off-by: Yan Wang <yan.wang@amlogic.com>

--- a/drivers/amlogic/Kconfig
+++ b/drivers/amlogic/Kconfig
@@ -119,6 +119,7 @@ source "drivers/amlogic/uart/Kconfig"
 source "drivers/amlogic/smartcard/Kconfig"
 source "drivers/amlogic/mtd/Kconfig"
 source "drivers/amlogic/audioinfo/Kconfig"
+source "drivers/amlogic/dolby_fw/Kconfig"
 
 endmenu
 endif
