--- a/drivers/amlogic/Makefile
+++ b/drivers/amlogic/Makefile
@@ -45,6 +45,7 @@ obj-$(CONFIG_AMLOGIC_SMARTCARD)		+= smartcard/
 obj-$(CONFIG_MMC_MESON_GX)		+= mmc/
 obj-$(CONFIG_AMLOGIC_USB)               += usb/
 obj-$(CONFIG_AMLOGIC_DVB_DMX)		+= dvb/
+obj-$(CONFIG_DOLBY_FW) += dolby_fw/
 
 KBUILD_CFLAGS_MODULE += $(GKI_EXT_MODULE_PREDEFINE)
 
