--- a/arch/arm64/boot/dts/amlogic/meson-sc2.dtsi
+++ b/arch/arm64/boot/dts/amlogic/meson-sc2.dtsi
@@ -216,6 +216,12 @@
 		reserve_mem_size = <0x03300000>;
 	};
 
+	dolby_fw: dolby_fw {
+		compatible = "amlogic, dolby_fw";
+		mem_size = <0x100000>;
+		status = "okay";
+	};
+
 	xtal: xtal-clk {
 		compatible = "fixed-clock";
 		clock-frequency = <24000000>;
