cvbsout: adjust pal index [1/1]
PD#SWPL-29423

Problem:
telecom index test failure

Solution:
adjust cvbsout register

Verify:
sc2 ah212

Signed-off-by: qiang.liu <qiang.liu@amlogic.com>
Change-Id: Iae7456771f5e6adfc34ffbcbf8b289ff6856958f

--- a/arch/arm/boot/dts/amlogic/sc2_s905x4_ah212.dts
+++ b/arch/arm/boot/dts/amlogic/sc2_s905x4_ah212.dts
@@ -156,11 +156,11 @@
 
 		/* performance: reg_address, reg_value */
 		/* tm2 */
-		performance = <0x1bf0  0x9
+		performance = <0x1bf0  0x3
 			0x1b56  0x333
-			0x1b12  0x8080
-			0x1b05  0xfd
-			0x1c59  0xf850
+			0x1b12  0x8180
+			0x1b05  0xf0
+			0x1c59  0xed66
 			0xffff  0x0>; /* ending flag */
 		performance_sarft = <0x1bf0  0x9
 			0x1b56  0x333
