mm: add cma shrinker [1/1]
PD#SWPL-39212

Problem:
lmkd may not trigger if most free memory are CMA memory
on Android R

Solution:
Add a cma shrinker as a supplement for lmkd

Verify:
AH212

Change-Id: I957d3f487b0c8da8df5b7a66db25b0630310b268
Signed-off-by: Jianxin Pan <jianxin.pan@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesont5d.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont5d.dtsi
@@ -198,6 +198,14 @@
 		out_base_func = <0x82000021>;
 		reserve_mem_size = <0x00300000>;
 	};
+
+	cma_shrinker {
+		compatible = "amlogic, cma-shrinker";
+		status = "okay";
+		adj  = <0 100 200 250 900 950>;
+		free = <18432 23040 27648 32256 36864 46080>;
+	};
+
 	securitykey {
 		compatible = "amlogic, securitykey";
 		status = "disabled";
