--- a/arch/arm64/boot/dts/amlogic/meson-tm-common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/meson-tm-common.dtsi
@@ -48,6 +48,13 @@
 		reserve_mem_size = <0x00300000>;
 	};
 
+	cma_shrinker {
+		compatible = "amlogic, cma-shrinker";
+		status = "okay";
+		adj  = <0 100 200 250 900 950>;
+		free = <18432 23040 27648 32256 36864 46080>;
+	};
+
 	meson_uvm {
 		compatible = "amlogic, meson_uvm";
 		status = "okay";
