Fan: Increase speed to 5 levels [1/2]
Change-Id: I21bf2c0d98884d3e54b792308dbddb073e80ed11

--- a/arch/arm64/boot/dts/rockchip/rk3399-khadas-edge.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399-khadas-edge.dtsi
@@ -285,7 +285,7 @@
 		cooling-min-state = <0>;
 		cooling-max-state = <3>;
 		#cooling-cells = <2>;
-		cooling-levels = <0 150 200 255>;
+		cooling-levels = <0 76 114 153 178 255>;
 		trig_temp_level0 = <50>;
 		trig_temp_level1 = <60>;
 		trig_temp_level2 = <70>;
