module: build error in build-module mode [1/1]
PD#SWPL-39805

Problem:
'GX_SUSPEND' was builded as ko,but multiple build-in modules depend
on it,leading to the loss of some symbols.

Solution:
remove dependence on 'GX_SUSPEND' module.

Verify:
verified on S905X4-AH212

Change-Id: I624ef391a941eb60edccacdd57f84e63d627c478
Signed-off-by: tuan zhang <tuan.zhang@amlogic.com>

--- a/drivers/amlogic/pm/Kconfig
+++ b/drivers/amlogic/pm/Kconfig
@@ -13,7 +13,7 @@ config AMLOGIC_SUSPEND
       If you want this support, you should say Y here.
 
 config AMLOGIC_GX_SUSPEND
-    bool "Meson gx chips pm driver"
+    tristate "Meson gx chips pm driver"
     depends on AMLOGIC_SUSPEND
     depends on CPU_IDLE
     depends on PM_WAKELOCKS
